--- a/templates/action-culture.html
+++ b/templates/action-culture.html
@@ -1,5 +1,5 @@
 <li data-ng-controller="W20CultureActionController" class="dropdown" id="ddlanguage">
-    <a class="dropdown-toggle" id="ddlanguage-link" data-toggle="dropdown" data-target="#" data-role="button">
+    <a class="dropdown-toggle" id="ddlanguage-link" data-toggle="dropdown" data-target="" data-role="button">
         <i class="icon-flag icon-white glyphicon glyphicon-flag"></i> {{ currentCulture().nativeName | firstUpperCase }}<b class="caret"></b>
     </a>
     <ul id="ddlanguage-menu" class="dropdown-menu" data-role="menu">
